[build-system]
requires = [
    "setuptools>=73.0.1",
    # "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzingbook"
version = "1.2.3"
authors = [
    { name = "Andreas Zeller", email = "andreas.zeller@cispa.de" },
    { name = "Rahul Gopinath", email = "rahul@gopinath.org" },
    { name = "Marcel Böhme", email = "marcel.boehme@acm.org" },
    { name = "Gordon Fraser", email = "Gordon.Fraser@uni-passau.de" },
    { name = "Christian Holler", email = "choller@mozilla.com" },
]
description = "Code for 'The Fuzzing Book' (https://www.fuzzingbook.org/)"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE.md" ]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security"
]
dependencies = [
    'beautifulsoup4>=4.9.3',
    'cargo>=0.3',
    'diff_match_patch>=20200713',
    'easyplotly>=0.1.3',
    'enforce>=0.3.4',
    'graphviz>=0.14.2',
    'ipython>=7.16.1',
    'isla-solver>=0.8.9;python_version >= "3.10"',  # ISLa wants 3.10 or newer
    'lxml>=4.5.1',
    'Markdown>=3.3.4',
    'markdown>=3.4.3',
    'matplotlib>=3.3.2',
    'multiprocess>=0.70.12.2',
    'nbconvert>=6.0.7',
    'nbformat>=5.0.8',
    'networkx>=2.5',
    'notedown>=1.5.1',
    'numpy>=1.16.5',
    'pandas>=1.3.3',
    # Can't have external packages referenced on pypi, so commented out:
    # 'pyan@git+https://github.com/uds-se/pyan#egg=pyan',
    'pydriller>=2.0',
    'pyparsing==2.4.7',  # newer versions conflict with bibtexparser
    'pygraphviz>=1.9',
    'Pygments>=2.7.1',
    'python-magic>=0.4.18',
    'requests>=2.26.0',
    'scikit_learn>=0.23.2',
    'scipy>=1.7.1',
    'selenium>=3.141.0',
    'showast2>=0.3.1',
    'svglib>=1.1.0',
    'yapf>=0.31.0',
    'z3-solver>=4.8.13.0;platform_machine == "x86_64"', # Z3 runs on x86 only
]

[tool.setuptools.packages.find]
where = ["code"]
exclude = ["fuzzingbook*"]

[project.urls]
homepage = "https://fuzzingbook.org/"
repository = "https://github.com/uds-se/fuzzingbook/"
"Bug Tracker" = "https://github.com/uds-se/fuzzingbook/issues"

[project.optional-dependencies]
dev = [
    "autopep8>=1.5.4",
    "bibtexparser>=1.0.1",
    "entrypoints>=0.3",
    "ipython-genutils>=0.2.0",  # required by (our) ipypublish
    "jupyter>=1.0.0",
    "jupyter-client>=6.1.7",
    "mypy>=0.910",
    "spellchecker>=0.4",
    "testpath>=0.6.0",
    "types-Markdown>=3",
    "types-requests>=2.25.11",
]
binder = [
    "svglib",
    "selenium",
    "valgrind",
    "jupyter_contrib_nbextensions",
    "python-magic"
]
